src/layouts/base.css
@layer base {
	:root {
		--colorBackgroundBottom: #fcffff;
		--colorBackgroundTop: #faffff;
		--colorEmphasized: #1170d0;
		--colorForeground: #283556;
		--colorForegroundExtra: #142842;
		--colorMedium: #789dc7;
		--colorSubtle: #d7e9ef;

		--fontSizeSmaller: 1rem;
		--fontSizeSmall: 1.2rem;
		--fontSizeMedium: 1.5rem;
		--fontSizeLarge: 2rem;
		--fontSizeSubtitle: 1.75rem;
		--fontSizeTitle: 3.5rem;

		--fontWeightLight: 300;
		--fontWeightMedium: 500;
		--fontWeightBold: 600;
		--fontWeightBolder: 700;

		--lineHeightBase: 1.1;
		--lineHeightParagraph: 1.35;

		--textShadow: 3px 3px 1px var(--colorSubtle);

		--transitionFast: 117ms;
		--transitionMedium: 280ms;
		--transitionSlow: 700ms;

		--heightMinimumFromHeader: clamp(7rem, 15vmin, 9rem);

		--widthFull: 63rem;
		--widthSlim: 47rem;
		--widthTableOfContents: 15rem;

		/* Note: some of these are unused in Prism, but would be in Shiki. */
		--astro-code-color-background: transparent;
		--astro-code-color-deleted: #903838;
		--astro-code-color-inserted: #0e601c;
		--astro-code-color-text: #232642;
		--astro-code-token-comment: #139e4b;
		--astro-code-token-constant: #001080;
		--astro-code-token-function: #466da3;
		--astro-code-token-keyword: #0058cb;
		--astro-code-token-link: #e7ffe7;
		--astro-code-token-parameter: #588591;
		--astro-code-token-punctuation: #0f90a1;
		--astro-code-token-string-expression: #408aa7;
		--astro-code-token-string: #674cab;
	}

	html {
		background: var(--colorBackgroundBottom);
		overflow-y: auto;
	}

	body {
		background:
			linear-gradient(
					to bottom,
					transparent 70%,
					var(--colorBackgroundBottom) 100%
				)
				no-repeat,
			radial-gradient(
					ellipse at top,
					var(--colorBackgroundTop) 15%,
					var(--colorBackgroundBottom) 100%
				)
				no-repeat;
		overflow-y: auto;
		line-height: var(--lineHeightBase);
		position: fixed;
		top: 0;
		bottom: 0;
		scrollbar-gutter: stable;
		width: 100%;
	}

	body,
	button {
		font-family: "League SpartanVariable", sans-serif;
	}

	body,
	:link,
	:visited {
		color: var(--colorForeground);
		transition: var(--transitionMedium) color;
		text-decoration: none;
	}

	main {
		position: relative;
	}

	html.dark {
		--colorBackgroundBottom: #111117;
		--colorBackgroundTop: #071428;
		--colorEmphasized: #77bbff;
		--colorForeground: #dae7f3;
		--colorForegroundExtra: #e5edf3;
		--colorSubtle: #052438;

		--lineHeightParagraph: 1.5;

		/* Note: some of these are unused in Prism, but would be in Shiki. */
		--astro-code-color-text: #d3d6f0;
		--astro-code-color-deleted: #f08080;
		--astro-code-color-inserted: #70c27d;
		--astro-code-token-comment: #85cab1;
		--astro-code-token-constant: #d4d8f4;
		--astro-code-token-function: #85b8ff;
		--astro-code-token-keyword: #b0cff7;
		--astro-code-token-link: #bde3bd;
		--astro-code-token-parameter: #8dc1d0;
		--astro-code-token-punctuation: #55e1f3;
		--astro-code-token-string-expression: #82c1da;
		--astro-code-token-string: #b3baf2;
	}

	@media (prefers-reduced-motion: no-preference) {
		html,
		body {
			scroll-behavior: smooth;
		}
	}
}

